# django-reusable-apps

./: README.md
blog/: LICENSE.txt  MANIFEST.in  README.rst  boot_django.py  setup.cfg  setup.py
blog/posts/: views.py
blog/posts/templates/blogger/templates/: index.html
