[metadata]
name = posts
version = 0.0.1
description = An demonstration of how to create, document, and publish posts for reader. Basically it is blog content package.
long_description = file: README.rst
url = https://github.com/erronny/django-reusable-posts
author = Ronny Dsouza
author_email = thehemedia@gmail.com
license = BSD-3-Clause  
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: X.Y  
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find: